--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "base"]
 	path = base
-	url = git@github.com:adevress/nixpkgs-base.git
+	url = https://github.com/adevress/nixpkgs-base.git
